--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -97,7 +97,6 @@
     "paste_tabs": { "message": "Вставить вкладки" },
     "tab_copied": { "message": "Вкладка скопирована" },
     "tab_cut": { "message": "Вкладка вырезана" },
-    "delete_this_group": { "message": "Удалить" },
     "group_is_now_private": {
         "message": "Эта группа теперь является закрытой. Не забудьте заблокировать ее."
     },
@@ -167,9 +166,6 @@
     "i_confirm_want_delete_groups": {
         "message": "Я подтверждаю, что хочу удалить все группы"
     },
-    "confirm_want_delete_groups": {
-        "message": "Подтвердите, что хотите удалить все группы"
-    },
     "confirm": { "message": "Подтвердить" },
     "all_groups_deleted": { "message": "Все группы удалены" },
     "show_private_groups_incognito": {
@@ -232,6 +228,8 @@
     },
     "use_current_url": { "message": "Использовать текущий URL" },
     "make_private": { "message": "Сделать приватной" },
+    "delete_url_lock": { "message": "Удалить привязанный URL от приватной группы" },
+    "delete": { "message": "Удалить" },
     "remember_pass_after_unlock_desc": {
         "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль"
     }
