--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -226,10 +226,15 @@
     "use_current_url": { "message": "Use current URL" },
     "make_private": { "message": "Make private" },
     "remove_url_lock": { "message": "Remove URL lock from a private group" },
-    "remove_url_lock_desc": { "message": "If you've lost a private group that is bound to the specific URL and want to restore it, you can enter a group name and a password to remove attached URL from that group. You'll be able to access it if your provided credentials were correct." },
+    "remove_url_lock_desc": {
+        "message": "If you've lost a private group that is bound to the specific URL and want to restore it, you can enter a group name and a password to remove attached URL from that group. You'll be able to access it if your provided credentials were correct."
+    },
     "delete": { "message": "Delete" },
     "enter_credentials": { "message": "Enter credentials" },
     "rebind_to_other_url": { "message": "Rebind to other URL" },
+    "bind_url_removed": {
+        "message": "Bind URL was removed from the group. The group is accessible."
+    },
     "remember_pass_after_unlock_desc": {
         "message": "If you disable this option, you will need to enter a password everytime when you want to lock any private group. Keeping this option enabled saves password in temporary and secure storage and allows you to lock groups back without entering your password"
     }
