--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -229,9 +229,14 @@
     "use_current_url": { "message": "Использовать текущий URL" },
     "make_private": { "message": "Сделать приватной" },
     "remove_url_lock": { "message": "Удалить привязанный URL от приватной группы" },
-    "remove_url_lock_desc": { "message": "Если вы потеряли приватную группу, привязанную к определенному URL-адресу, и хотите восстановить ее, вы можете ввести название группы и пароль, чтобы удалить привязанный URL-адрес из этой группы. Вы сможете получить к ней доступ, если введенные вами учетные данные верны." },
+    "remove_url_lock_desc": {
+        "message": "Если вы потеряли приватную группу, привязанную к определенному URL-адресу, и хотите восстановить ее, вы можете ввести название группы и пароль, чтобы удалить привязанный URL-адрес из этой группы. Вы сможете получить к ней доступ, если введенные вами учетные данные верны."
+    },
     "enter_credentials": { "message": "Введите учетные данные" },
     "delete": { "message": "Удалить" },
+    "bind_url_removed": {
+        "message": "URL-адрес привязки был удален из группы. Группа доступна."
+    },
     "remember_pass_after_unlock_desc": {
         "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль"
     }
