--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -196,9 +196,12 @@
     "use_current_url": { "message": "使用当前网址" },
     "make_private": { "message": "设为私密" },
     "remove_url_lock": { "message": "解除私人群组的URL锁定" },
-    "remove_url_lock_desc": { "message": "若您遗失了与特定网址绑定的私人群组并希望恢复，可输入群组名称及密码以解除该群组与网址的绑定。若您提供的凭据正确，即可重新访问该群组。" },
+    "remove_url_lock_desc": {
+        "message": "若您遗失了与特定网址绑定的私人群组并希望恢复，可输入群组名称及密码以解除该群组与网址的绑定。若您提供的凭据正确，即可重新访问该群组。"
+    },
     "enter_credentials": { "message": "输入凭据" },
     "delete": { "message": "删除" },
+    "bind_url_removed": { "message": "绑定网址已从该组中移除。该组仍可访问。" },
     "remember_pass_after_unlock_desc": {
         "message": "若禁用此选项，每次锁定私人群组时均需输入密码。保持此选项启用状态，系统会将密码存储在临时且安全的存储空间中，您无需再次输入密码即可重新锁定群组"
     }
