refactor: link store

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -92,8 +92,9 @@
     "pass_empty": { "message": "Пароль пуст" },
     "passwords_not_match": { "message": "Пароли не совпадают" },
     "add_more_tabs": { "message": "Добавить больше вкладок" },
-    "cut_tab": { "message": "Вырезать эту вкладку" },
-    "copy_tab": { "message": "Скопировать эту вкладку" },
+    "cut": { "message": "Вырезать" },
+    "copy": { "message": "Скопировать" },
+    "pin": { "message": "Закрепить" },
     "paste_tabs": { "message": "Вставить вкладки" },
     "tab_copied": { "message": "Вкладка скопирована" },
     "tab_cut": { "message": "Вкладка вырезана" },
