--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -7,6 +7,10 @@
         "message": "Password needs to be at least $n$ characters",
         "placeholders": { "n": { "content": "$1" } }
     },
+    "browser_cannot_open_tab": {
+        "message": "Your browser doesn't allow opening the tab $n$",
+        "placeholders": { "n": { "content": "$1" } }
+    },
     "you_have_unlocked_groups": {
         "message": "You have $n$ unlocked private groups. Please don't forget to lock them back when you no longer need it.",
         "placeholders": { "n": { "content": "$1" } }
