--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -7,6 +7,10 @@
         "message": "Пароль должен состоять как минимум из $n$ символов",
         "placeholders": { "n": { "content": "$1" } }
     },
+    "browser_cannot_open_tab": {
+        "message": "Ваш браузер запретил открытие вкладки $n$",
+        "placeholders": { "n": { "content": "$1" } }
+    },
     "you_have_unlocked_groups": {
         "message": "У вас есть $n$ разблокированных приватных групп. Не забудьте заблокировать их обратно, когда они вам больше не понадобятся.",
         "placeholders": { "n": { "content": "$1" } }
