--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -241,6 +241,7 @@
     "rebind_to_other_url": { "message": "Rebind to other URL" },
     "create_new_folder": { "message": "Create a new folder" },
     "folder_created": { "message": "Folder created" },
+    "drop_to_remove": { "message": "Drop here to remove from folder" },
     "bind_url_removed": {
         "message": "Bind URL was removed from the group. The group is accessible."
     },
