--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -244,6 +244,7 @@
     "delete": { "message": "Удалить" },
     "create_new_folder": { "message": "Создать новую папку" },
     "folder_created": { "message": "Папка создана" },
+    "drop_to_remove": { "message": "Перетащите сюда, чтобы удалить из папки" },
     "bind_url_removed": {
         "message": "URL-адрес привязки был удален из группы. Группа доступна."
     },
