chore: add showing folder popup
wip on #47

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -71,6 +71,7 @@
     },
     "error_no_tab_selected": { "message": "Вкладка не выбрана" },
     "want_delete_group": { "message": "Вы хотите удалить группу?" },
+    "want_delete_folder": { "message": "Вы хотите удалить папку? Все группы внутри этой папки также будут удалены." },
     "click_on_each_tab": {
         "message": "Нажмите на каждую вкладку, чтобы выбрать или отменить выбор для сохранения"
     },
