--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -71,6 +71,7 @@
     },
     "error_no_tab_selected": { "message": "No tab selected" },
     "want_delete_group": { "message": "Do you want to delete the group?" },
+    "want_delete_folder": { "message": "Do you want to delete this folder? All groups inside of this folder will be also deleted." },
     "no_tabs_this_group": { "message": "There are no tabs in this group" },
     "click_on_each_tab": {
         "message": "Click on each tab to select or unselect it for saving to memory"
