--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -216,6 +216,7 @@
     "bind_url_removed": { "message": "绑定网址已从该组中移除。该组仍可访问。" },
     "folder_created": { "message": "文件夹已创建" },
     "drop_to_remove": { "message": "拖放至此可从文件夹中移除" },
+    "next": { "message": "接下来" },
     "remember_pass_after_unlock_desc": {
         "message": "若禁用此选项，每次锁定私人群组时均需输入密码。保持此选项启用状态，系统会将密码存储在临时且安全的存储空间中，您无需再次输入密码即可重新锁定群组"
     }
