chore: remove private group button in header

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -140,8 +140,8 @@
     "group_created_with_tabs": { "message": "Группа создана с вкладками" },
     "close_selected_tabs": { "message": "Закрыть выбранное" },
     "bind_to_url": { "message": "Привязать к URL" },
-    "private_groups_are_secure": {
-        "message": "Приватные группы защищены и используют шифрование. Доступ к ним имеют только пользователи с паролем"
+    "do_you_want_private_group": {
+        "message": "Хотите сделать свою группу приватной? Приватные группы являются безопасными и зашифрованными. Доступ к ним можно получить только зная пароль."
     },
     "rate_us": { "message": "Оцените нас" },
     "storage_usage": { "message": "Хранилище" },
