--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -141,8 +141,8 @@
     "group_created_with_tabs": { "message": "Group created with tabs" },
     "close_selected_tabs": { "message": "Close selected tabs" },
     "bind_to_url": { "message": "Bind to URL" },
-    "private_groups_are_secure": {
-        "message": "Private groups are secure and use encryption. Only users with the password can access them"
+    "do_you_want_private_group": {
+        "message": "Do you want to make your group private? Private groups are secure and encrypted. You can only access them knowing the password."
     },
     "rate_us": { "message": "Rate Us" },
     "storage_usage": { "message": "Storage usage" },
