--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -123,8 +123,8 @@
     "group_created_with_tabs": { "message": "创建的组包含标签页" },
     "close_selected_tabs": { "message": "关闭选中的标签页" },
     "bind_to_url": { "message": "绑定到URL" },
-    "private_groups_are_secure": {
-        "message": "私有组是安全的并使用加密。只有知道密码的用户可以访问"
+    "do_you_want_private_group": {
+        "message": "您是否希望将您的群组设为私密？私密群组具有安全加密特性，只有知晓密码的人才能访问。"
     },
     "rate_us": { "message": "评价我们" },
     "storage_usage": { "message": "存储使用" },
