--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -56,7 +56,6 @@
     "no": { "message": "No" },
     "lock": { "message": "Lock" },
     "unlock": { "message": "Unlock" },
-    "rebind": { "message": "Rebind" },
     "bound_to_url": { "message": "Bound to URL" },
     "opened_tabs_times": { "message": "Opened tabs times" },
     "opened_tabs_times_tip": {
@@ -152,10 +151,7 @@
     "change_icon": { "message": "Change Icon" },
     "choose_group_icon": { "message": "Choose a group icon" },
     "icon_is_set": { "message": "Icon has been set" },
-    "enter_new_url_bind_private_to_new_url": {
-        "message": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL. Do not forget to lock the group"
-    },
-    "enter_new_url_bind_to": { "message": "Enter a new URL to bind to" },
+    "enter_url_bind_to": { "message": "Enter a URL to bind to" },
     "group_rebind_successful": { "message": "Group rebind successful" },
     "url_must_start_with_http": { "message": "URL must start with https://" },
     "select_emoji": { "message": "Select emoji" },
